--- a/src/app/components/incentive/incentive.component.html
+++ b/src/app/components/incentive/incentive.component.html
@@ -1,4 +1,5 @@
-<p>incentive works! YES NAVAR HERE</p>
+<p>incentive works! YES NAVAR HERE 2345</p>
 <a [routerLink]="'/incentive'">List</a><br>
 <a [routerLink]="'/incentive/awards'">Awards</a>
 <router-outlet></router-outlet>
+<button (click)="logOut()">Log Out</button>
